--- a/project/frontend/src/scenes/TimetableInfo/TimetableInfo.scss
+++ b/project/frontend/src/scenes/TimetableInfo/TimetableInfo.scss
@@ -13,3 +13,15 @@
 .container {
   padding: 20px;
 }
+
+.confirmedOrder {
+  background-color: green;
+}
+
+.noOrders {
+  background-color: white;
+}
+
+.createdOrder {
+  background-color: moccasin;
+}
